[gd_scene load_steps=4 format=3 uid="uid://begesdy7jwibu"]

[ext_resource type="Script" uid="uid://dxfew01hwae6w" path="res://scn/end.gd" id="1_brxep"]

[sub_resource type="LabelSettings" id="LabelSettings_r411q"]
font_size = 70
font_color = Color(0, 1, 1, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_brxep"]

[node name="end" type="Node2D"]
script = ExtResource("1_brxep")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 2120.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Score" type="Label" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 256.0
offset_right = 288.0
offset_bottom = 328.0
text = "score"
label_settings = SubResource("LabelSettings_r411q")

[node name="MaxScore" type="Label" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 128.0
offset_right = 434.0
offset_bottom = 200.0
text = "max score"
label_settings = SubResource("LabelSettings_r411q")

[node name="Panel" type="Panel" parent="."]
offset_left = 24.0
offset_top = 1872.0
offset_right = 1056.0
offset_bottom = 2024.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1024.0
offset_bottom = 280.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Menu" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 110.865)
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "menu"
icon = SubResource("ViewportTexture_brxep")

[node name="Restart" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 132)
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "restart"
icon = SubResource("ViewportTexture_brxep")

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
